--- a/dev/pug/modules/header/header.pug
+++ b/dev/pug/modules/header/header.pug
@@ -1,1 +1,24 @@
 header.header
+    .container
+        .logo.header-logo
+            +icon('logo')
+        ul.header-nav__list
+            li.header-nav__item
+                a(href="tel:").header__phone 8 800 800-80-80
+            li.header-nav__item
+                a(href="").header-nav__link Обратный звонок
+            li.header-nav__item
+                a(href="").header-nav__link Адреса салонов
+        ul.header-nav__list
+            li.header-nav__item
+                +icon()
+                a(href="").header-nav__link Как заказать
+            li.header-nav__item
+                +icon()
+                a(href="").header-nav__link Оплата
+            li.header-nav__item
+                +icon()
+                a(href="").header-nav__link Доставка
+
+        ul.header-nav__list
+
