--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -16,6 +16,14 @@
   "desktop-wide": 1440px
 );
 
-@content-size: 1024px;
+@content-size: 1140px;
 
 // Fonts
+@thin-font:          'Clear Sans Thin',            Arial, sans-serif;
+@light-font:         'Clear Sans Light',           Arial, sans-serif;
+@main-font:          'Clear Sans',                 Arial, sans-serif;
+@medium-font:        'Clear Sans Medium',          Arial, sans-serif;
+@medium-italic-font: 'Clear Sans Medium Italic',   Arial, sans-serif;
+@bold-font:          'Clear Sans Bold',            Arial, sans-serif;
+@bold-italic-font:   'Clear Sans Bold Italic',     Arial, sans-serif;
+@italic-font:        'Clear Sans Italic',          Arial, sans-serif;
