--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -1,6 +1,9 @@
 // Colors
-@white: #ffffff;
-@black: #000000;
+@white:       #ffffff;
+@black:       #000000;
+@redColor:    #ef4113;
+@grayColor:   #7d7e7e;
+
 
 // Sizes
 @base-font-size: 16px;
