--- a/dev/static/less/modules/header/header.less
+++ b/dev/static/less/modules/header/header.less
@@ -1,30 +1,92 @@
 header {
   background-color: @black;
 
-  .container {
-    display: flex;
-    align-items: center;
-  }
+
 }
 
 .header {
+  &-top {
+    .container {
+      display: flex;
+      align-items: flex-end;
+      border-bottom: 1px solid rgba(@black, .13);
+      margin-bottom: 20px;
+    }
+  }
+  &-logo {
+    margin-right: 60px;
+  }
   &__phone {
     color: @white;
+    font-size: 20px;
   }
   &-nav {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    flex: 1;
+    padding-bottom: 30px;
+    &__user {
+      display: flex;
+      .header-nav__item-icon {
+        width: 30px;
+        height: 30px;
+        margin-right: 0;
+        margin-bottom: 15px;
+      }
+      &-icon {
+        position: relative;
+        display: inline-block;
+      }
+      &-count {
+        position: absolute;
+        top: -10px;
+        right: -5px;
+        background-color: @redColor;
+        color: @white;
+        font-size: 12px;
+        display: block;
+        width: 22px;
+        height: 22px;
+        border-radius: 50%;
+        padding-top: 4px;
+      }
+      &-item{
+        text-align: center;
+        margin-left: 25px;
+        &:first-child { margin-left: 45px; }
+      }
+    }
     &__item {
+      margin-bottom: 10px;
+
+      &:last-child { margin-bottom: 0; }
       &-icon {
         fill: @white;
         width: 17px;
         height: 17px;
+        margin-right: 10px;
       }
     }
     &__link {
       color: @white;
+      font-size: 15px;
+      border-bottom: 1px solid @grayColor;
+      &.header-nav__link--dotted { border-bottom: 1px dotted @grayColor; }
+      &.header-nav__link--user {
+        display: block;
+      }
+    }
+    &__list {
+      &--user {
+
+      }
     }
   }
 }
 
 .icon-logo {
   fill: @white;
+  width: 240px;
+  height: 130px;
 }
