--- a/dev/static/less/main.less
+++ b/dev/static/less/main.less
@@ -3,6 +3,7 @@
 @import "utils/mixins";
 @import "utils/fonts";
 @import "utils/helpers";
+@import "pages/pages";
 
 html {
   font-size: @base-font-size;
@@ -62,6 +63,7 @@ input[type="submit"] {
 .container {
   margin: 0 auto;
   max-width: @content-size;
+  padding: 0 70px;
   width: 100%;
   position: relative;
 }
