--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -3,6 +3,7 @@
 @black:       #000000;
 @redColor:    #ef4113;
 @grayColor:   #7d7e7e;
+@orangeColor:      #d09f74;
 
 
 // Sizes
@@ -19,7 +20,7 @@
   "desktop-wide": 1440px
 );
 
-@content-size: 1140px;
+@content-size: 1280px;
 
 // Fonts
 @thin-font:          'Clear Sans Thin',            Arial, sans-serif;
