--- a/dev/static/less/modules/small-blocks/small-blocks.less
+++ b/dev/static/less/modules/small-blocks/small-blocks.less
@@ -7,4 +7,16 @@
   text-transform: uppercase;
   text-decoration: underline;
   &:visited { color: @black; }
+  &.g-btn--black {
+    background-color: @blackColor;
+    color: @white;
+  }
+}
+
+.g-section-title {
+  margin-bottom: 35px;
+  font-family: @bold-font;
+  font-size: 32px;
+  text-align: center;
+  &.g-section-title--white { color: @white; }
 }
