--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -3,7 +3,8 @@
 @black:       #000000;
 @redColor:    #ef4113;
 @grayColor:   #7d7e7e;
-@orangeColor:      #d09f74;
+@orangeColor: #d09f74;
+@blackColor:  #343434;
 
 
 // Sizes
