--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -8,3 +8,8 @@ block content
 	include pages/index/slider
 	include pages/index/pic-menu
 	include pages/index/recommended
+	include pages/index/popular
+	include pages/index/video
+
+block script
+	script(src="https://www.youtube.com/iframe_api")
