--- a/dev/static/less/main.less
+++ b/dev/static/less/main.less
@@ -40,7 +40,10 @@ img {
 
 textarea { resize: none; }
 
-section { position: relative; }
+section {
+  position: relative;
+  padding: 60px 0;
+}
 
 input,
 select,
