--- a/dev/pug/pages/index/recommended.pug
+++ b/dev/pug/pages/index/recommended.pug
@@ -8,116 +8,14 @@ section.recommended
         h2.g-section-title Рекомендуемые товары
         .recommended-slider
             .js-recommended-slider
-                .product-prev
-                    img(src="static/images/content/products/prev1.jpg").product-prev__img
-                    .product-prev__content
-                        a(href="").product-prev__title Набор бокалов для красного вина серия-Frau, SCHOTT ZWIESEL
-                        +productPrevLine('Материал: ','хрустальное стекло')
-                        +productPrevLine('Высота: ','22.9 см')
-                        +productPrevLine('Диаметр: ','9.1 см')
-                        +productPrevLine('Назначение: ','для красного вина')
-                        .product-prev__line-price
-                            span.product-prev__price 635 &#8381;
-                            .product-prev__availability
-                                +icon('mark','product-prev__icon')
-                                span Есть в наличии
-                        .product-prev__line-action
-                            .product-prev__action.product-prev__action--favorite
-                                +icon('favorites','product-prev__icon')
-                                span В избранное
-                            .product-prev__action.product-prev__action--comparison
-                                +icon('comparison','product-prev__icon')
-                                span Сравнить
-                    .product-prev__btn
-                            a(href="").g-btn.g-btn--black В корзину
-                .product-prev
-                    img(src="static/images/content/products/prev1.jpg").product-prev__img
-                    .product-prev__content
-                        a(href="").product-prev__title Набор чайный "Ричоло" CHINELLI
-                        +productPrevLine('Материал: ','фарфор')
-                        +productPrevLine('Покрытие: ','глазурь')
-                        +productPrevLine('Страна: ','Италия')
-                        +productPrevLine('Вид упаковки: ','подарочная')
-                        .product-prev__line-price
-                            span.product-prev__price 9 155 &#8381;
-                            .product-prev__availability
-                                +icon('clock','product-prev__icon')
-                                span Под заказ
-                        .product-prev__line-action
-                            .product-prev__action.product-prev__action--favorite
-                                +icon('favorites','product-prev__icon')
-                                span В избранное
-                            .product-prev__action.product-prev__action--comparison
-                                +icon('comparison','product-prev__icon')
-                                span Сравнить
-                    .product-prev__btn
-                            a(href="").g-btn.g-btn--black В корзину
-                .product-prev
-                    img(src="static/images/content/products/prev1.jpg").product-prev__img
-                    .product-prev__content
-                        a(href="").product-prev__title Блендер погружной Six SFB.555, STADLER FORM MBT
-                        +productPrevLine('Вес: ','1.3 кг')
-                        +productPrevLine('Количество насадок: ','9')
-                        +productPrevLine('Звуковой сигнал: ','нет')
-                        +productPrevLine('Защита от детей: ','есть')
-                        .product-prev__line-price
-                            span.product-prev__price 9 990 &#8381;
-                            .product-prev__availability
-                                +icon('mark','product-prev__icon')
-                                span Есть в наличии
-                        .product-prev__line-action
-                            .product-prev__action.product-prev__action--favorite
-                                +icon('favorites','product-prev__icon')
-                                span В избранное
-                            .product-prev__action.product-prev__action--comparison
-                                +icon('comparison','product-prev__icon')
-                                span Сравнить
-                    .product-prev__btn
-                            a(href="").g-btn.g-btn--black В корзину
-                .product-prev
-                    img(src="static/images/content/products/prev1.jpg").product-prev__img
-                    .product-prev__content
-                        a(href="").product-prev__title Блюдо "Smiley", EVA SOLO
-                        +productPrevLine('Вид упаковки: ','подарочная')
-                        +productPrevLine('Материал: ','стекло')
-                        +productPrevLine('Диаметр: ','21 см')
-                        +productPrevLine('Страна: ','Дания')
-                        .product-prev__line-price
-                            span.product-prev__price 8 200 &#8381;
-                            .product-prev__availability
-                                +icon('clock','product-prev__icon')
-                                span Под заказ
-                        .product-prev__line-action
-                            .product-prev__action.product-prev__action--favorite
-                                +icon('favorites','product-prev__icon')
-                                span В избранное
-                            .product-prev__action.product-prev__action--comparison
-                                +icon('comparison','product-prev__icon')
-                                span Сравнить
-                    .product-prev__btn
-                            a(href="").g-btn.g-btn--black В корзину
-                .product-prev
-                    img(src="static/images/content/products/prev1.jpg").product-prev__img
-                    .product-prev__content
-                        a(href="").product-prev__title Набор бокалов для красного вина серия-Frau, SCHOTT ZWIESEL
-                        +productPrevLine('Материал: ','хрустальное стекло')
-                        +productPrevLine('Высота: ','22.9 см')
-                        +productPrevLine('Диаметр: ','9.1 см')
-                        +productPrevLine('Назначение: ','для красного вина')
-                        .product-prev__line-price
-                            span.product-prev__price 635 &#8381;
-                            .product-prev__availability
-                                +icon('mark','product-prev__icon')
-                                span Есть в наличии
-                        .product-prev__line-action
-                            .product-prev__action.product-prev__action--favorite
-                                +icon('favorites','product-prev__icon')
-                                span В избранное
-                            .product-prev__action.product-prev__action--comparison
-                                +icon('comparison','product-prev__icon')
-                                span Сравнить
-                    .product-prev__btn
-                        a(href="").g-btn.g-btn--black В корзину
+                include ../../modules/product-prev/product-prev1
+                include ../../modules/product-prev/product-prev2
+                include ../../modules/product-prev/product-prev3
+                include ../../modules/product-prev/product-prev4
+                include ../../modules/product-prev/product-prev1
+                include ../../modules/product-prev/product-prev2
+                include ../../modules/product-prev/product-prev3
+                include ../../modules/product-prev/product-prev4
             .recommended-slider__nav
                 .recommended-slider__controls.recommended-slider__controls--prev
                     +icon('chevron-left','recommended-slider__controls-icon')
