--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -10,6 +10,7 @@ block content
 	include pages/index/recommended
 	include pages/index/popular
 	include pages/index/video
+	include pages/index/promo
 
 block script
 	script(src="https://www.youtube.com/iframe_api")
