--- a/dev/pug/pages/index/recommended.pug
+++ b/dev/pug/pages/index/recommended.pug
@@ -16,10 +16,10 @@ section.recommended
                 include ../../modules/product-prev/product-prev2
                 include ../../modules/product-prev/product-prev3
                 include ../../modules/product-prev/product-prev4
-            .recommended-slider__nav
-                .recommended-slider__controls.recommended-slider__controls--prev
-                    +icon('chevron-left','recommended-slider__controls-icon')
-                .recommended-slider__controls.recommended-slider__controls--next
-                    +icon('chevron-right','recommended-slider__controls-icon')
+            .product-prev-slider__nav
+                .product-prev-slider__controls.product-prev-slider__controls--prev
+                    +icon('chevron-left','product-prev-slider__controls-icon')
+                .product-prev-slider__controls.product-prev-slider__controls--next
+                    +icon('chevron-right','product-prev-slider__controls-icon')
 
 
