--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -11,6 +11,9 @@ block content
 	include pages/index/popular
 	include pages/index/video
 	include pages/index/promo
+	include pages/index/donotmiss
+	include pages/index/subscribe
+	include pages/index/news
 
 block script
 	script(src="https://www.youtube.com/iframe_api")
