--- a/dev/pug/pages/index/promo.pug
+++ b/dev/pug/pages/index/promo.pug
@@ -1,6 +1,8 @@
 section.promo
     .container
         h2.g-section-title Акции
+        .promo-news-wrap
+            include ../../modules/promo-news-prev/promo-prev
 
         .content-center
             a(href="").g-btn.g-btn--black Все акции
