--- a/dev/static/less/modules/modules.less
+++ b/dev/static/less/modules/modules.less
@@ -5,3 +5,5 @@
 @import "small-blocks/small-blocks";
 @import "menu/menu";
 @import "product-prev/product-prev";
+@import "promo-news-prev/promo-news-prev";
+@import "forms/forms";
