--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -7,13 +7,15 @@ block variables
 block content
 	include pages/index/slider
 	include pages/index/pic-menu
-	include pages/index/recommended
-	include pages/index/popular
-	include pages/index/video
 	include pages/index/promo
-	include pages/index/donotmiss
-	include pages/index/subscribe
 	include pages/index/news
+	include pages/index/popular
+	include pages/index/recommended
+	include pages/index/video
+	//include pages/index/donotmiss
+	include pages/index/subscribe
+	include pages/index/advantages
+
 
 block script
 	script(src="https://www.youtube.com/iframe_api")
