--- a/dev/pug/pages/index/pic-menu.pug
+++ b/dev/pug/pages/index/pic-menu.pug
@@ -4,28 +4,27 @@ mixin picMenuLink(link,title)
 
 section.pic-menu
     .container
-        .pic-menu__line
-            .pic-menu__50
-                .pic-menu__line
-                    .pic-menu__25
-                        .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25.jpg')")
-                            .pic-menu__nav
-                                a(href="").pic-menu__title Мебель
-                                ul.pic-menu-list
-                                    li.pic-menu-list__item
-                                        a(href="").pic-menu-list__link Кухни
-                                    li.pic-menu-list__item
-                                        a(href="").pic-menu-list__link Столы
-                                    li.pic-menu-list__item
-                                        a(href="").pic-menu-list__link Стулья
-                                    li.pic-menu-list__item
-                                        a(href="").pic-menu-list__link Барная
-                                    li.pic-menu-list__item
-                                        a(href="").pic-menu-list__link мебель
-                                    li.pic-menu-list__item
-                                        a(href="").pic-menu-list__link Еще 15 разделов
+        .cont-line
+            .cont-50
+                .cont-line
+                    .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25.jpg')")
+                        .pic-menu__nav
+                            a(href="").pic-menu__title Мебель
+                            ul.pic-menu-list
+                                li.pic-menu-list__item
+                                    a(href="").pic-menu-list__link Кухни
+                                li.pic-menu-list__item
+                                    a(href="").pic-menu-list__link Столы
+                                li.pic-menu-list__item
+                                    a(href="").pic-menu-list__link Стулья
+                                li.pic-menu-list__item
+                                    a(href="").pic-menu-list__link Барная
+                                li.pic-menu-list__item
+                                    a(href="").pic-menu-list__link мебель
+                                li.pic-menu-list__item
+                                    a(href="").pic-menu-list__link Еще 15 разделов
 
-                    .pic-menu__25
+                    .cont-25
                         .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25.jpg')")
                             .pic-menu__nav
                                 a(href="").pic-menu__title Хранение вина
@@ -38,7 +37,7 @@ section.pic-menu
                                         a(href="").pic-menu-list__link шкафы
                                     li.pic-menu-list__item
                                         a(href="").pic-menu-list__link Еще 3 раздела
-                .pic-menu__line
+                .cont-line
                     .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25-25.jpg')")
                         .pic-menu__nav
                             a(href="").pic-menu__title Крупная и мелкая бытовая техника
@@ -70,9 +69,9 @@ section.pic-menu
                     .pic-menu-review__bottom
                         a(href="").g-btn Узнать больше
 
-        .pic-menu__line
-            .pic-menu__50
-                .pic-menu__25
+        .cont-line
+            .cont-50
+                .cont-25
                     .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25.jpg')")
                         .pic-menu__nav
                             a(href="").pic-menu__title Бар и хрусталь
@@ -82,7 +81,7 @@ section.pic-menu
                                 li.pic-menu-list__item
                                     a(href="").pic-menu-list__link Еще 32 раздела
 
-                .pic-menu__25
+                .cont-25
                     .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25.jpg')")
                         .pic-menu__nav
                             a(href="").pic-menu__title Ножи
@@ -96,7 +95,7 @@ section.pic-menu
                                 li.pic-menu-list__item
                                     a(href="").pic-menu-list__link Еще 11 разделов
 
-            .pic-menu__50
+            .cont-50
                 .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25-25.jpg')")
                     .pic-menu__nav
                         a(href="").pic-menu__title Посуда
@@ -119,8 +118,8 @@ section.pic-menu
 
 
 
-        .pic-menu__line
-            .pic-menu__50
+        .cont-line
+            .cont-50
                 .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25-25.jpg')")
                     .pic-menu__nav
                         a(href="").pic-menu__title Кухонная утварь
@@ -131,8 +130,8 @@ section.pic-menu
                                 a(href="").pic-menu-list__link Банки для сыпучих продуктов
                             li.pic-menu-list__item
                                 a(href="").pic-menu-list__link Еще 45 разделов
-            .pic-menu__50
-                .pic-menu__25
+            .cont-50
+                .cont-25
                     .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25.jpg')")
                         .pic-menu__nav
                             a(href="").pic-menu__title Сервировка
@@ -144,7 +143,7 @@ section.pic-menu
                                 li.pic-menu-list__item
                                     a(href="").pic-menu-list__link Еще 32 раздела
 
-                .pic-menu__25
+                .cont-25
                     .pic-menu__item(style="background-image:url('static/images/content/pic-menu/pic-menu__25.jpg')")
                         .pic-menu__nav
                             a(href="").pic-menu__title Текстиль
@@ -153,9 +152,6 @@ section.pic-menu
                                     a(href="").pic-menu-list__link Салфетки подстановочные
                                 li.pic-menu-list__item
                                     a(href="").pic-menu-list__link Еще 45 разделов
-
-
-
 
 
 
