--- a/dev/static/less/modules/small-blocks/small-blocks.less
+++ b/dev/static/less/modules/small-blocks/small-blocks.less
@@ -48,3 +48,29 @@
     width: 100%;
   }
 }
+
+.social-list {
+  display: flex;
+  &__item {
+    width: 35px;
+    height: 35px;
+    border: 2px solid @white;
+    margin-left: -2px;
+    &:first-child { margin-left: 0;}
+  }
+  &__link {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 15px;
+    height: 15px;
+    fill: @white;
+  }
+}
