отследить fs32 на цене

--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -10,7 +10,7 @@ block content
 	include pages/index/promo
 	include pages/index/news
 	include pages/index/popular
-	include pages/index/recommended
+	include modules/recommended/recommended
 	include pages/index/video
 	//include pages/index/donotmiss
 	include pages/index/subscribe
