--- a/dev/pug/modules/product-prev/product-prev2.pug
+++ b/dev/pug/modules/product-prev/product-prev2.pug
@@ -2,13 +2,13 @@
     img(src="static/images/content/products/product1/prev.jpg").product-prev__img
     .product-prev__content
         a(href="").product-prev__title Набор чайный "Ричоло" CHINELLI
-        +productPrevLine('Материал: ','фарфор')
-        +productPrevLine('Покрытие: ','глазурь')
-        +productPrevLine('Страна: ','Италия')
-        +productPrevLine('Вид упаковки: ','подарочная')
+        +productInfoLine('Материал: ','фарфор')
+        +productInfoLine('Покрытие: ','глазурь')
+        +productInfoLine('Страна: ','Италия')
+        +productInfoLine('Вид упаковки: ','подарочная')
         .product-prev__line-price
-            span.product-prev__price 9 155 &#8381;
-            .product-prev__availability
+            span.product-price 9 155 &#8381;
+            .product-availability
                 +icon('clock','product-prev__icon')
                 span Под заказ
         .product-prev__line-action
