--- a/dev/pug/modules/product-prev/product-prev4.pug
+++ b/dev/pug/modules/product-prev/product-prev4.pug
@@ -2,13 +2,13 @@
     img(src="static/images/content/products/product1/prev.jpg").product-prev__img
     .product-prev__content
         a(href="").product-prev__title Блюдо "Smiley", EVA SOLO
-        +productPrevLine('Вид упаковки: ','подарочная')
-        +productPrevLine('Материал: ','стекло')
-        +productPrevLine('Диаметр: ','21 см')
-        +productPrevLine('Страна: ','Дания')
+        +productInfoLine('Вид упаковки: ','подарочная')
+        +productInfoLine('Материал: ','стекло')
+        +productInfoLine('Диаметр: ','21 см')
+        +productInfoLine('Страна: ','Дания')
         .product-prev__line-price
-            span.product-prev__price 8 200 &#8381;
-            .product-prev__availability
+            span.product-price 8 200 &#8381;
+            .product-availability
                 +icon('clock','product-prev__icon')
                 span Под заказ
         .product-prev__line-action
