--- a/dev/static/less/modules/modules.less
+++ b/dev/static/less/modules/modules.less
@@ -7,3 +7,5 @@
 @import "product-prev/product-prev";
 @import "promo-news-prev/promo-news-prev";
 @import "forms/forms";
+@import "recommended/recommended";
+@import "breadcrumbs/breadcrumbs";
