--- a/dev/static/less/modules/small-blocks/small-blocks.less
+++ b/dev/static/less/modules/small-blocks/small-blocks.less
@@ -24,6 +24,10 @@
   font-size: 32px;
   text-align: center;
   &.g-section-title--white { color: @white; }
+  &.g-section-title--product {
+    margin-bottom: 20px;
+    text-align: left;
+  }
 }
 
 .content-center {
