--- a/dev/static/less/pages/index/pic-menu.less
+++ b/dev/static/less/pages/index/pic-menu.less
@@ -26,7 +26,7 @@
     display: inline-block;
     text-transform: uppercase;
     color: @white;
-    border-bottom: 1px solid @grayColor;
+    border-bottom: 1px solid @linkBorderColor;
     margin-bottom: 10px;
   }
   &-list {
@@ -39,14 +39,14 @@
         margin-right: 0;
         margin-bottom: 0;
         .pic-menu-list__link {
-          color: @orangeColor;
-          border-bottom-color: @orangeColor;
+          color: @accentColor;
+          border-bottom-color: @accentColor;
         }
       }
     }
     &__link {
       color: @white;
-      border-bottom: 1px solid @grayColor;
+      border-bottom: 1px solid @linkBorderColor;
     }
   }
   &-review {
@@ -100,7 +100,7 @@
       text-transform: uppercase;
       margin-bottom: 10px;
       &-work {
-        color: @orangeColor;
+        color: @accentColor;
       }
     }
   }
