--- a/dev/static/less/pages/index/popular.less
+++ b/dev/static/less/pages/index/popular.less
@@ -18,10 +18,10 @@
       margin-right: 5px;
       color: @white;
       text-transform: uppercase;
-      border-bottom: 1px solid @grayColor;
+      border-bottom: 1px solid @linkBorderColor;
     }
     &__country {
-      color: @orangeColor;
+      color: @accentColor;
     }
   }
   &:before {
