--- a/dev/static/less/pages/index/slider.less
+++ b/dev/static/less/pages/index/slider.less
@@ -94,7 +94,7 @@
   &__title {
     font-size: 15px;
     text-transform: uppercase;
-    color: @orangeColor;
+    color: @accentColor;
     display: block;
     margin-bottom: 10px;
   }
