--- a/dev/static/less/pages/index/video.less
+++ b/dev/static/less/pages/index/video.less
@@ -21,10 +21,10 @@
     display: block;
     margin-bottom: 5px;
     font-size: 15px;
-    color: @orangeColor;
+    color: @accentColor;
   }
   &__link {
-    border-bottom: 1px solid @grayColor;
+    border-bottom: 1px solid @linkBorderColor;
     color: @white;
   }
   &__img {
