--- a/dev/static/less/pages/pages.less
+++ b/dev/static/less/pages/pages.less
@@ -1,9 +1,9 @@
 @import "index/slider";
 @import "index/pic-menu";
-@import "index/recommended";
 @import "index/popular";
 @import "index/video";
 @import "index/promo";
 @import "index/donotmiss";
 @import "index/subscribe";
 @import "index/advantages";
+@import "product/product";
