--- a/dev/pug/modules/product-prev/product-prev1.pug
+++ b/dev/pug/modules/product-prev/product-prev1.pug
@@ -2,13 +2,13 @@
     img(src="static/images/content/products/product1/prev.jpg").product-prev__img
     .product-prev__content
         a(href="").product-prev__title Набор бокалов для красного вина серия-Frau, SCHOTT ZWIESEL
-        +productPrevLine('Материал: ','хрустальное стекло')
-        +productPrevLine('Высота: ','22.9 см')
-        +productPrevLine('Диаметр: ','9.1 см')
-        +productPrevLine('Назначение: ','для красного вина')
+        +productInfoLine('Материал: ','хрустальное стекло')
+        +productInfoLine('Высота: ','22.9 см')
+        +productInfoLine('Диаметр: ','9.1 см')
+        +productInfoLine('Назначение: ','для красного вина')
         .product-prev__line-price
-            span.product-prev__price 635 &#8381;
-            .product-prev__availability
+            span.product-price 635 &#8381;
+            .product-availability
                 +icon('mark','product-prev__icon')
                 span Есть в наличии
         .product-prev__line-action
