--- a/dev/pug/modules/product-prev/product-prev3.pug
+++ b/dev/pug/modules/product-prev/product-prev3.pug
@@ -2,13 +2,13 @@
     img(src="static/images/content/products/product1/prev.jpg").product-prev__img
     .product-prev__content
         a(href="").product-prev__title Блендер погружной Six SFB.555, STADLER FORM MBT
-        +productPrevLine('Вес: ','1.3 кг')
-        +productPrevLine('Количество насадок: ','9')
-        +productPrevLine('Звуковой сигнал: ','нет')
-        +productPrevLine('Защита от детей: ','есть')
+        +productInfoLine('Вес: ','1.3 кг')
+        +productInfoLine('Количество насадок: ','9')
+        +productInfoLine('Звуковой сигнал: ','нет')
+        +productInfoLine('Защита от детей: ','есть')
         .product-prev__line-price
-            span.product-prev__price 9 990 &#8381;
-            .product-prev__availability
+            span.product-price 9 990 &#8381;
+            .product-availability
                 +icon('mark','product-prev__icon')
                 span Есть в наличии
         .product-prev__line-action
