--- a/dev/pug/pages/index/subscribe.pug
+++ b/dev/pug/pages/index/subscribe.pug
@@ -4,8 +4,8 @@ section.subscribe
         .subscribe-form__wrap
             .subscribe-form__content
                 form.subscribe-form
-                    label.g-label Ваш e-mail
-                    input(type="email").g-input.g-input--email
+                    label(for="subscribe-email").g-label Ваш e-mail
+                    input(type="email" name="email").g-input.g-input--email#subscribe-email
                     input(type="submit" value='Подписаться').g-btn.g-btn--no-underline
                 p.subscribe-text Раз в неделю мы рассказываем о поступлениях новых товаров, акциях и новостях нашего магазина. В любой момент сможете отказаться от подписки. Без спама.
 
