--- a/dev/static/less/modules/header/header.less
+++ b/dev/static/less/modules/header/header.less
@@ -5,11 +5,13 @@
     left: 0;
     right: 0;
     z-index: 2;
+    background-color: transparent;
   }
+
 }
 
 .header {
-  background-color: transparent;
+  background-color: @black;
   &-top {
     .container {
       display: flex;
@@ -47,7 +49,7 @@
         position: absolute;
         top: -10px;
         right: -5px;
-        background-color: @redColor;
+        background-color: @notificationColor;
         color: @white;
         font-size: 12px;
         display: block;
@@ -76,8 +78,8 @@
     &__link {
       color: @white;
       font-size: 15px;
-      border-bottom: 1px solid @grayColor;
-      &.header-nav__link--dotted { border-bottom: 1px dotted @grayColor; }
+      border-bottom: 1px solid @linkBorderColor;
+      &.header-nav__link--dotted { border-bottom: 1px dotted @linkBorderColor; }
       &.header-nav__link--user {
         display: block;
       }
