--- a/dev/static/less/modules/promo-news-prev/promo-news-prev.less
+++ b/dev/static/less/modules/promo-news-prev/promo-news-prev.less
@@ -17,7 +17,7 @@
     display: block;
     margin-bottom: 10px;
     font-size: 15px;
-    color: @orangeColor;
+    color: @accentColor;
   }
   &__title {
     display: block;
