--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -1,10 +1,11 @@
 // Colors
-@white:       #ffffff;
-@black:       #000000;
-@redColor:    #ef4113;
-@grayColor:   #7d7e7e;
-@orangeColor: #d09f74;
-@blackColor:  #343434;
+@white:                 #ffffff;
+@black:                 #000000;
+@notificationColor:     #ef4113;
+@linkBorderColor:       #7d7e7e;
+@accentColor:           #d09f74;
+@blackColor:            #343434;
+@breadcrumbsBgColor:    #f5f5f5;
 
 
 // Sizes
