--- a/dev/pug/modules/product-prev/product-prev1.pug
+++ b/dev/pug/modules/product-prev/product-prev1.pug
@@ -12,10 +12,10 @@
                 +icon('mark','product-prev__icon')
                 span Есть в наличии
         .product-prev__line-action
-            .product-prev__action.product-prev__action--favorite
+            .product-action.product-prev__action--favorite
                 +icon('favorites','product-prev__icon')
                 span В избранное
-            .product-prev__action.product-prev__action--comparison
+            .product-action.product-prev__action--comparison
                 +icon('comparison','product-prev__icon')
                 span Сравнить
     .product-prev__btn
