--- a/dev/pug/pages/product/product.pug
+++ b/dev/pug/pages/product/product.pug
@@ -25,3 +25,7 @@ section.product-prev
                     .product-feedback
                         +icon('mail','product-feedback__icon')
                         a(href="") Обратная связь
+                .product-buttons
+                    a(href="").g-btn.g-btn--black Добавить в корзину
+                    a(href="").g-btn.g-btn--border-black Купить в 1 клик
+                .product-actions
