--- a/dev/static/less/modules/header/header.less
+++ b/dev/static/less/modules/header/header.less
@@ -13,12 +13,9 @@
 .header {
   background-color: @black;
   &-top {
-    .container {
-      display: flex;
-      align-items: flex-end;
-      border-bottom: 1px solid rgba(@black, .13);
-      margin-bottom: 20px;
-    }
+    display: flex;
+    align-items: flex-end;
+    border-bottom: 1px solid @menuBorderColor;
   }
   &-logo {
     margin-right: 60px;
