--- a/dev/static/less/modules/footer/footer.less
+++ b/dev/static/less/modules/footer/footer.less
@@ -22,7 +22,8 @@ footer { flex: 0 0 auto; }
     display: flex;
     align-items: flex-start;
     padding-top: 25px;
-    border-top: 1px solid @linkBorderColor;
+    border-top: 1px solid @menuBorderColor;
+
   }
   &-copyright { margin-right: 40px; }
   &-rules {
@@ -65,7 +66,6 @@ footer { flex: 0 0 auto; }
     margin-left: auto;
     &__line { margin-bottom: 30px; }
   }
-  .main-nav { margin-bottom: 30px; }
 }
 
 .copyright {
