--- a/dev/static/less/pages/product/product.less
+++ b/dev/static/less/pages/product/product.less
@@ -23,6 +23,8 @@
   }
   &-specification {
     width: 60%;
+    display: flex;
+    flex-direction: column;
   }
   &-callback {
     position: relative;
@@ -52,6 +54,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    margin-bottom: 25px;
   }
   &-feedback {
     width: 35%;
@@ -61,6 +64,19 @@
       height: 17px;
       margin-right: 10px;
     }
+  }
+  &-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+    .g-btn {
+      width: 48%;
+    }
+  }
+  &-action {
+    margin-right: 20px;
+    &:last-child { margin-right: 0; }
   }
 }
 
