--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -6,6 +6,8 @@
 @accentColor:           #d09f74;
 @blackColor:            #343434;
 @breadcrumbsBgColor:    #f5f5f5;
+@menuBorderColor:       #3b3b3b;
+@menuBGHoverColor:      #404040;
 
 
 // Sizes
