--- a/dev/static/less/modules/breadcrumbs/breadcrumbs.less
+++ b/dev/static/less/modules/breadcrumbs/breadcrumbs.less
@@ -1,5 +1,5 @@
 .breadcrumbs {
-  background-color: @breadcrumbsBgColor;
+  background-color: @lightBgColor;
   padding: 20px 0;
   &-list {
     display: flex;
