--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -5,7 +5,7 @@
 @linkBorderColor:       #7d7e7e;
 @accentColor:           #d09f74;
 @blackColor:            #343434;
-@breadcrumbsBgColor:    #f5f5f5;
+@lightBgColor:          #f5f5f5;
 @menuBorderColor:       #3b3b3b;
 @menuBGHoverColor:      #404040;
 
