--- a/dev/static/less/pages/product/product.less
+++ b/dev/static/less/pages/product/product.less
@@ -77,6 +77,106 @@
   &-action {
     margin-right: 20px;
     &:last-child { margin-right: 0; }
+    &__icon {
+      width: 17px;
+      height: 17px;
+      margin-right: 10px;
+    }
+    a {
+      border-bottom: 1px dotted @linkBorderColor;
+    }
+  }
+  &-actions {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  &-line {
+    display: flex;
+    justify-content: space-between;
+  }
+  &-delivery,
+  &-warranty {
+    width: 48%;
+  }
+  &-delivery {
+    &__info {
+      background-color: @lightBgColor;
+      padding: 15px;
+      margin-bottom: 20px;
+      span {
+        display: block;
+        &:first-child {
+          margin-bottom: 15px;
+        }
+      }
+    }
+    &__city {
+      margin-bottom: 10px;
+    }
+    &-variants {
+      &__item {
+        position: relative;
+        padding-left: 10px;
+        &:before {
+          content:'';
+          display: block;
+          position: absolute;
+          top: 5px;
+          left: 0;
+          width: 5px;
+          height: 5px;
+          background-color: @blackColor;
+        }
+      }
+      &__key {
+        display: block;
+        margin-bottom: 5px;
+      }
+      &__val {
+        display: block;
+        color: @accentColor;
+      }
+    }
+  }
+  &-title-icon {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    &__icon {
+      width: 34px;
+      height: 34px;
+      margin-right: 10px;
+    }
+  }
+  &-gallery {
+    &-main {
+      position: relative;
+    }
+    &-controls {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: @lightBgColor;
+      width: 45px;
+      height: 45px;
+      z-index: 1;
+      cursor: pointer;
+      &.product-gallery-controls--prev {
+        left: 0;
+      }
+      &.product-gallery-controls--next {
+        right: 0;
+      }
+      &__icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        width: 11px;
+        height: 17px;
+      }
+    }
   }
 }
 
