--- a/dev/pug/product.pug
+++ b/dev/pug/product.pug
@@ -16,6 +16,7 @@ block content
                     a(href="").breadcrumbs-list__link Бокалы для красного вина
 
     include pages/product/product
+    include pages/product/product-tabs
     include modules/recommended/recommended
 
 
