--- a/dev/static/less/main.less
+++ b/dev/static/less/main.less
@@ -6,9 +6,11 @@
 @import "pages/pages";
 
 html {
+  //line-height: 1;
   font-size: @base-font-size;
   height: 100%;
   font-family: @main-font;
+  color: @blackColor;
 }
 
 body { height: 100%; }
@@ -21,7 +23,10 @@ ul, li {
   padding: 0;
 }
 
-a { text-decoration: none; }
+a {
+  text-decoration: none;
+  color: @blackColor;
+}
 
 p { margin: 0; }
 
