--- a/dev/static/less/pages/product/product.less
+++ b/dev/static/less/pages/product/product.less
@@ -94,6 +94,8 @@
   &-line {
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid #eee;
+    padding-top: 20px;
   }
   &-delivery,
   &-warranty {
@@ -175,6 +177,14 @@
         transform: translate(-50%,-50%);
         width: 11px;
         height: 17px;
+      }
+    }
+    &-nav {
+      &__item {
+        border: 1px solid @black;
+        max-width: 120px;
+        margin-right: 20px;
+        &:last-child { margin-right: 0; }
       }
     }
   }
