#12@39:00 табы статьи закончены

--- a/dev/pug/pages/product/product-tabs.pug
+++ b/dev/pug/pages/product/product-tabs.pug
@@ -16,7 +16,7 @@ section.product-tabs
                 include tabs/characteristics
                 .tab-content__item.tab-about
                 .tab-content__item.tab-reviews
-                .tab-content__item.tab-faq
+                include tabs/faq
                 .tab-content__item.tab-video
-                .tab-content__item.tab-articles
+                include tabs/articles
 
