--- a/dev/pug/product.pug
+++ b/dev/pug/product.pug
@@ -17,6 +17,7 @@ block content
 
     include pages/product/product
     include pages/product/product-tabs
+    include pages/product/you-see
     include modules/recommended/recommended
 
 
