--- a/dev/static/less/modules/tabs/tabs.less
+++ b/dev/static/less/modules/tabs/tabs.less
@@ -25,6 +25,15 @@
           border-bottom: 0;
         }
       }
+      &:after {
+        content:'';
+        position: absolute;
+        right: -10px;
+        bottom: 0;
+        top: 0;
+        width: 10px;
+        background-color: @white;
+      }
     }
     &__text {
       border-bottom: 1px dotted @linkBorderColor;
