--- a/dev/static/less/pages/product/product-tabs.less
+++ b/dev/static/less/pages/product/product-tabs.less
@@ -1,1 +1,10 @@
 @import "tabs/characteristics";
+@import "tabs/faq";
+@import "tabs/articles";
+
+.product-tabs {
+  .container {
+    padding-bottom: 60px;
+    border-bottom: 1px solid #eee;
+  }
+}
