--- a/dev/pug/pages/product/product-tabs.pug
+++ b/dev/pug/pages/product/product-tabs.pug
@@ -15,7 +15,7 @@ section.product-tabs
             .tabs-content
                 include tabs/characteristics
                 .tab-content__item.tab-about
-                .tab-content__item.tab-reviews
+                include tabs/reviews
                 include tabs/faq
                 .tab-content__item.tab-video
                 include tabs/articles
