--- a/dev/pug/pages/product/you-see.pug
+++ b/dev/pug/pages/product/you-see.pug
@@ -1,2 +1,16 @@
-section.product-tabs
+section.you-see
     .container
+        h2.g-section-title Вы недавно смотрели
+        .you-see__content
+            .you-see__item
+                img(src="static/images/content/you-see/prev-1.jpeg").you-see__img
+                a(href="").you-see_link Бокал для шампанского 200 мл серия Frau Schott Zwiesel (в упаковке 6 шт)
+            .you-see__item
+                img(src="static/images/content/you-see/prev-1.jpeg").you-see__img
+                a(href="").you-see_link Бокал для шампанского 200 мл серия Frau Schott Zwiesel (в упаковке 6 шт)
+            .you-see__item
+                img(src="static/images/content/you-see/prev-1.jpeg").you-see__img
+                a(href="").you-see_link Бокал для шампанского 200 мл серия Frau Schott Zwiesel (в упаковке 6 шт)
+            .you-see__item
+                img(src="static/images/content/you-see/prev-1.jpeg").you-see__img
+                a(href="").you-see_link Бокал для шампанского 200 мл серия Frau Schott Zwiesel (в упаковке 6 шт)
