--- a/dev/static/less/main.less
+++ b/dev/static/less/main.less
@@ -10,7 +10,7 @@ html {
   font-size: @base-font-size;
   height: 100%;
   font-family: @main-font;
-  color: @blackColor;
+  color: @black;
 }
 
 body { height: 100%; }
