--- a/dev/static/less/pages/product/product-tabs.less
+++ b/dev/static/less/pages/product/product-tabs.less
@@ -1,6 +1,7 @@
 @import "tabs/characteristics";
 @import "tabs/faq";
 @import "tabs/articles";
+@import "tabs/reviews";
 
 .product-tabs {
   .container {
