--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -4,6 +4,7 @@
 @notificationColor:     #ef4113;
 @linkBorderColor:       #7d7e7e;
 @accentColor:           #d09f74;
+@ratingColor:           #b2743f;
 @blackColor:            #343434;
 @lightBgColor:          #f5f5f5;
 @menuBorderColor:       #3b3b3b;
